--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,3 +1,8 @@
-> Crypton's legend tells the isotope 19 (Cryptovid-19) brings prosperity and long life to people lucky enough to get some particules of them.
+## Origin & Legend
 
-some additionnal text...
+Cryptovid get its origin from the cryptonite, a crystal rock found on Crypton. 
+Along millenars some nano particules from cryptonite crystal becomes highly volalite, this what we call now "Cryptovid".
+Cryptovid is generally dangerous for humans but Isotope 19 of the Cryptovid is somewhat different.
+Until nowadays medical research never found any bad side effect on humans and any kind of life. 
+
+> Crypton's legend tells the isotope 19 of Cryptovid (Cryptovid-19) brings prosperity and long life to people lucky enough to get some particules of them.
