--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,4 +1,4 @@
-## What Cryptovid may brings to you
+## What some particules of the Isotope 21 of Cryptovid may brings to you
 
 <ProjectCard
   title="No sanity risk"
