--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,8 +1,4 @@
 # Cryptovid-21
-Cryptovid gets its origin from the cryptonite, a crystal rock found on Crypton. 
-Along millenars some nano particules from cryptonite crystal becomes higly volalite, this what we call now "Cryptovid".
+The rare Isotope 21 <strong>available now</strong> on uniswap <a href="#"><strong>get yours !!!</strong></a>
 
-Cryptovid is generally dangerous for humans but Isotope 19 of the Cryptovid is somewhat different.
-Until nowadays medical research never found any bad side effect on humans and any kind of life. 
 
-> Crypton's legend tells the isotope 19 of Cryptovid (Cryptovid-19) brings prosperity and long life to people lucky enough to get some particules of them.
